--- a/New_Website.html
+++ b/New_Website.html
@@ -126,7 +126,7 @@
        
     </style>
 </head>
-    <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
+    <center><h1><br>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
 <body>
     <!-- Navigation -->
     <nav>
