--- a/GitSphere.html
+++ b/GitSphere.html
@@ -26,7 +26,7 @@
         }
 
         h1 {
-            color: #333;
+            color: white;
             font-size: 50px;
             text-align: center;
             margin-top: 20px;
