--- a/GitSphere.html
+++ b/GitSphere.html
@@ -169,7 +169,7 @@
 
     <!-- Header Section -->
     <header id="home">
-        <h1>Welcome to My Enhanced Website</h1>
+        <h1>Welcome to My Enhanced Website</h1><br>
         <h4>Here’s a paragraph specifically about the links in the navigation section:
 
 "The links in this navigation bar serve as gateways to various parts of my online presence. Each link is designed to take you to a different website, offering a curated collection of content and resources. From my personal homepage to several dedicated websites, these links ensure that you can explore everything I have to offer with ease. Each site opens in a new tab, allowing you to maintain your place while diving deeper into specific topics or projects. Whether you're visiting the 'About Me' section or discovering new external websites, these links keep the navigation smooth and efficient."</h4>
